tests/pre_push/policy/snapshots/pre_push__policy__pr_state__merged_marker_bound_pr_fails_closed_without_mutations.snap
---
source: tests/pre_push/policy/pr_state.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-non-open is MANAGED. Publishing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] [ERROR] GHerrit change '[GHERRIT_ID_1]' marker selects OPEN pull request #1 which GitHub did not return
