tests/pre_push/policy/snapshots/pre_push__policy__pr_state__non_open_pr_blocks_mutations.snap
---
source: tests/pre_push/policy/pr_state.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-non-open is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] [ERROR] Cannot push GHerrit change '[GHERRIT_ID_1]' because PR #1 is merged. Change the commit's gherrit-pr-id to start a new review.
